@@ -1,4 +1,5 @@
 Version 0.0.2 (not yet released):
+- CVL: print a backtrace when cvl_assert() fails (only on glibc systems).
 - CVL/cvtool: Added xadd and xsub layering modes.
 - CVL/cvtool: Added min and max filters.
 - CVL/cvtool: Renamed *smooth* to *filter*.
